# book-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  presentation.html  pyproject.toml  requirements.txt
notebooks/: cf_exploration.ipynb  explore_data.ipynb
scripts/: cf_similarity_ploy.py  download_data.py  embedding_dist_plot.py  long_tail_plot.py  rating_dist_plot.py  strategy_comparison.py
src/: config.py
src/api/: main.py  schemas.py
src/pipeline/: __init__.py  clean.py  embeddings.py  enrich.py  features.py  ingest.py  schemas.py  utils.py
src/recommender/: __init__.py  age_group.py  base.py  hidden_gems.py  loader.py  readers_also.py  registry.py  same_author.py  service.py  similar_themes.py  top_picks.py
src/ui/: app.js  index.html  styles.css
tests/: _helpers.py  compare_age_group.py  compare_hidden_gems.py  compare_readers_also.py  compare_same_author.py  compare_similar_themes.py  compare_top_picks.py
