[project]
name = "book-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.118.0",
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "pydantic>=2.11.0",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "rapidfuzz>=3.12.0",
    "scipy>=1.17.1",
    "sentence-transformers>=4.1.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
]
