[project]
name = "book-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.0",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "faiss-cpu>=1.11.0",
    "rapidfuzz>=3.12.0",
]

[dependency-groups]
pipeline = [
    "pyspark>=4.1.1",
    "sentence-transformers>=4.1.0",
    "httpx>=0.28.0",
]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
]
